perf: maintain processor-aware analyzer contexts